--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
       <div id="unityContainer" style="width: 1106px; height: 600px"></div>
       <div class="footer">
         <div class="webgl-logo"></div>
-        <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">LaserPuzzle</div>
+        <div class="title">Lights, a game about connections</div>
       </div>
     </div>
   </body>
