--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                     <li class="">
                         <a href="https://github.com/Ruppy/laser-game" target="_blank">C&oacute;digo fonte</a>
                     </li>
-                    <li class="">
+                    <!--<li class="">
                         <a href="https://github.com/Ruppy/laser-game/discussions/categories/feedbacks" target="_blank">Deixe sua opinião</a>
-                    </li>
+                    </li>-->
                     <!--<li class="page-scroll">
                         <a href="#presskit">Press Kit</a>
                     </li>-->
@@ -55,6 +55,9 @@
 
     <div class="webgl-content">
       <div id="unityContainer" style="width: 1106px; height: 600px"></div>
+      <div class="footer">
+        <div id="disqus_thread" style="margin-top: 15px"></div>
+      </div>
     </div>
 
     <script type="text/javascript">
@@ -69,5 +72,24 @@
       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
       })();
     </script>
+
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://ruppy.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
   </body>
 </html>
